--- a/ASSETS/templates/softpix/Template_Pack_1.1/BYM/GRAFICO13/GRAFICO13.html
+++ b/ASSETS/templates/softpix/Template_Pack_1.1/BYM/GRAFICO13/GRAFICO13.html
@@ -40,7 +40,15 @@
           field: "f0",
           ftype: "textfield",
           title: "ID DEL JUEGO",
-          value: "23+2+4++3",
+          value: "23+4+5++5",
+        },
+
+
+        {
+          field: "f1",
+          ftype: "textfield",
+          title: "MANAGER",
+          value: "MANAGER JOSE MORENO",
         },
 
         
@@ -84,7 +92,7 @@
       
         
       </div>
-      <div id="info_button" class="info-button">MANAGER JOSE MORENO </div>
+      <div id="info_button" class="info-button"> </div>
 
      </div>
 
@@ -94,6 +102,7 @@
 
     <div style="opacity: 0" id="f3"></div>
     <div style="opacity: 0" id="f0"></div>
+    <div style="opacity: 0" id="f1"></div>
 </div>
 
 
