--- a/ASSETS/templates/softpix/Template_Pack_1.1/BYM/BANNER-BATEADORS/BANNER-BATEADOR-FULL.html
+++ b/ASSETS/templates/softpix/Template_Pack_1.1/BYM/BANNER-BATEADORS/BANNER-BATEADOR-FULL.html
@@ -42,6 +42,107 @@
           value: "23+4+5++5",
         },
 
+        {
+                "field": "f1",
+                "ftype": "dropdown",
+                "title": "BATEADORES HOMECLUB",
+                "value": "",
+                "items": [
+
+                  {
+                        "text": "bateador-N/A",
+                        "value": ""
+                    },
+                    {
+                        "text": "bateador-1",
+                        "value": "0"
+                    },
+                    {
+                        "text": "bateador-2",
+                        "value": "1"
+                    },
+                    {
+                        "text": "bateador-3",
+                        "value": "2"
+                    },
+                    {
+                        "text": "bateador-4",
+                        "value": "3"
+                    },
+                    {
+                        "text": "bateador-5",
+                        "value": "4"
+                    },
+                    {
+                        "text": "bateador-6",
+                        "value": "5"
+                    },
+                    {
+                        "text": "bateador-7",
+                        "value": "6"
+                    },
+                    {
+                        "text": "bateador-8",
+                        "value": "7"
+                    },
+                    {
+                        "text": "bateador-9",
+                        "value": "8"
+                    },
+                   
+                ]
+            },
+
+            {
+                "field": "f2",
+                "ftype": "dropdown",
+                "title": "BATEADORES VISITANTE",
+                "value": "",
+                "items": [
+                   {
+                        "text": "bateador-N/A",
+                        "value": ""
+                    },
+                    {
+                        "text": "bateador-1",
+                        "value": "0"
+                    },
+                    {
+                        "text": "bateador-2",
+                        "value": "1"
+                    },
+                    {
+                        "text": "bateador-3",
+                        "value": "2"
+                    },
+                    {
+                        "text": "bateador-4",
+                        "value": "3"
+                    },
+                    {
+                        "text": "bateador-5",
+                        "value": "4"
+                    },
+                    {
+                        "text": "bateador-6",
+                        "value": "5"
+                    },
+                    {
+                        "text": "bateador-7",
+                        "value": "6"
+                    },
+                    {
+                        "text": "bateador-8",
+                        "value": "7"
+                    },
+                    {
+                        "text": "bateador-9",
+                        "value": "8"
+                    },
+                   
+                ]
+            },
+
 
         
       ],
@@ -92,9 +193,12 @@
     </div>
 
     <div style="opacity: 0" id="f0"></div>
+    <div style="opacity: 0" id="f1"></div>
+    <div style="opacity: 0" id="f2"></div>
     <div style="opacity: 0" id="f3"></div>
   </div>
   <script src="../_js/jquery-3.0.0.min.js"></script>
+  <script src="https://apis.google.com/js/api.js"></script>
   <script src="js/animaciones.js"></script>
   <script src="js/api.js"></script>
   <script src="js/temStyles.js"></script>
