--- a/ASSETS/templates/softpix/Template_Pack_1.1/BYM/BANNER-BATEADORS/BANNER-BATEADOR-SHORT-PRIMER-TURNO.html
+++ b/ASSETS/templates/softpix/Template_Pack_1.1/BYM/BANNER-BATEADORS/BANNER-BATEADOR-SHORT-PRIMER-TURNO.html
@@ -45,7 +45,7 @@
         },
 
         {
-          field: "f1",
+          field: "f4",
           ftype: "textfield",
           title: "Texto dinamico",
           value: "PRIMER TURNO AL BATE",
@@ -59,6 +59,7 @@
         },
 
 
+
         {
                   "field": "f3",
                   "ftype": "filelist",
@@ -67,6 +68,107 @@
                   "extension" : "png",
                   "value": "none",
               },
+
+              {
+                "field": "f1",
+                "ftype": "dropdown",
+                "title": "BATEADORES HOMECLUB",
+                "value": "",
+                "items": [
+
+                  {
+                        "text": "bateador-N/A",
+                        "value": ""
+                    },
+                    {
+                        "text": "bateador-1",
+                        "value": "0"
+                    },
+                    {
+                        "text": "bateador-2",
+                        "value": "1"
+                    },
+                    {
+                        "text": "bateador-3",
+                        "value": "2"
+                    },
+                    {
+                        "text": "bateador-4",
+                        "value": "3"
+                    },
+                    {
+                        "text": "bateador-5",
+                        "value": "4"
+                    },
+                    {
+                        "text": "bateador-6",
+                        "value": "5"
+                    },
+                    {
+                        "text": "bateador-7",
+                        "value": "6"
+                    },
+                    {
+                        "text": "bateador-8",
+                        "value": "7"
+                    },
+                    {
+                        "text": "bateador-9",
+                        "value": "8"
+                    },
+                   
+                ]
+            },
+
+            {
+                "field": "f2",
+                "ftype": "dropdown",
+                "title": "BATEADORES VISITANTE",
+                "value": "",
+                "items": [
+                   {
+                        "text": "bateador-N/A",
+                        "value": ""
+                    },
+                    {
+                        "text": "bateador-1",
+                        "value": "0"
+                    },
+                    {
+                        "text": "bateador-2",
+                        "value": "1"
+                    },
+                    {
+                        "text": "bateador-3",
+                        "value": "2"
+                    },
+                    {
+                        "text": "bateador-4",
+                        "value": "3"
+                    },
+                    {
+                        "text": "bateador-5",
+                        "value": "4"
+                    },
+                    {
+                        "text": "bateador-6",
+                        "value": "5"
+                    },
+                    {
+                        "text": "bateador-7",
+                        "value": "6"
+                    },
+                    {
+                        "text": "bateador-8",
+                        "value": "7"
+                    },
+                    {
+                        "text": "bateador-9",
+                        "value": "8"
+                    },
+                   
+                ]
+            },
       ],
     };
   </script>
@@ -101,10 +203,13 @@
       
     <div style="opacity: 0" id="f0"></div>
     <div style="opacity: 0" id="f1"></div>
+    <div style="opacity: 0" id="f2"></div>
+    <div style="opacity: 0" id="f4"></div>
     <div style="opacity: 0" id="f3"></div>
     <div style="opacity: 0" id="cont-3"></div>
   </div>
   <script src="../_js/jquery-3.0.0.min.js"></script>
+  <script src="https://apis.google.com/js/api.js"></script>
   <script src="js/animaciones.js"></script>
   <script src="js/api.js"></script>
   <script src="js/temStyles.js"></script>
