--- a/ASSETS/templates/softpix/Template_Pack_1.1/BYM/BANNER-BATEADORS/BANNER-BATEADOR-FULL.html
+++ b/ASSETS/templates/softpix/Template_Pack_1.1/BYM/BANNER-BATEADORS/BANNER-BATEADOR-FULL.html
@@ -170,7 +170,7 @@
       <div class="cont-2">
         <img id="fondo_equipos" style="position: absolute; left: 17%; z-index: 1000;"  alt="">
        
-          <div style="position: absolute; left: 16%; z-index: 1000;">
+          <div style="position: relative; left:5%; z-index: 1000;">
             <h1 class="name" id="name"></h1>
            <div  id="fxt" class="text-name">HOY:</div>
           </div>
