--- a/ASSETS/templates/softpix/Template_Pack_1.1/BYM/BANNER-BATEADORS/BANNER-BATEADOR-SHORT-PRIMER-TURNO.html
+++ b/ASSETS/templates/softpix/Template_Pack_1.1/BYM/BANNER-BATEADORS/BANNER-BATEADOR-SHORT-PRIMER-TURNO.html
@@ -188,7 +188,7 @@
         
             <div style="position: relative; left: 5%; z-index: 1000;">
               <h1 class="name" id="name"></h1>
-            <div  id="primer_turno" class="text-name">primer_turno</div>
+            <div  id="primer_turno" class="text-name"></div>
             </div>
           
         </div>
