--- a/views/view-controller.handlebars
+++ b/views/view-controller.handlebars
@@ -1073,8 +1073,6 @@ function playNextItem() {
   var previousIndex = (currentIndex === 1) ? playlistItems.length - 1 : currentIndex - 1;
   playlistItems[previousIndex].setAttribute('data-spx-onair', 'false');
 
-  console.log();
-
   currentItem.click();
   currentItem.setAttribute('data-spx-onair', 'true');
 
@@ -1121,10 +1119,12 @@ function stopPlayback() {
 }
 
 function playIteme() {
-  visibilityTime = parseInt(document.getElementById('visibilityInput' + currentIndex).value) || 10; // Valor por defecto en segundos
   playlistItems = document.querySelectorAll('.itemrow');
   playlistItems.forEach(function(item, index) {
+    var visibilityInput = document.getElementById('visibilityInput' + index);
+    var visibilityTime = parseInt(visibilityInput.value) || 10; // Valor por defecto en segundos
     item.setAttribute('data-visibility', visibilityTime);
+    // Guardar el valor en el Local Storage
     localStorage.setItem('visibilityInputValue_' + index, visibilityTime);
   });
 
@@ -1148,7 +1148,6 @@ function updateButtonColor() {
     button.innerText = 'playlist';
   }
 }
-
 window.onload = function() {
   for (var i = 0; i < playlistItems.length; i++) {
     var visibilityInput = document.getElementById('visibilityInput' + i);
